<resources>
    <string name="app_name" translatable="false">CircleGathering</string>
    <string name="action_settings">Action Settings</string>
    <string name="all_stories">All Stories</string>
    <string name="email_error_message">Email Format not match</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="stories">Stories</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="exit">Exit ?</string>
    <string name="are_you_sure_do_you_want_to_exit">Are you sure you want to exit from application?</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_email">Your Email</string>
    <string name="prompt_password">Your Password</string>
    <string name="click_here">Click Here</string>
    <string name="don_t_have_account_user_yet">Don\'t have account user yet?</string>
    <string name="welcome">Welcome, %1$s </string>
    <string name="button_add_data_story">Button Add Data Story</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="loading_please_wait">Loading....Please wait</string>
    <string name="select_image_input_type">Select Image Input Type</string>
    <string name="language_settings">Language Settings</string>
    <string name="input_password_error_message">Passwords must be at least 8 characters</string>
    <string name="input_name_error_message">Name musn\'t be empty!</string>
    <string name="image_data_error">Error No Data</string>
    <string name="data_not_available">Data Not Available</string>"
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="image_on_login_page">Image On Login Page</string>
    <string name="image_contentDescription">image</string>
    <string name="title_select_image">Select Image Action</string>
    <string name="lbl_camera">Camera</string>
    <string name="lbl_gallery">Gallery</string>
    <string name="insert_input_upload_validation_message">Please insert input description of the picture and Input picture</string>
    <string name="all_permission_device_are_denied">All permission device are denied</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_settings">Ke halaman pengaturan</string>
    <string name="message_setting_permissions">It Looks like you have turned off permissions required for this feature. It can be enabled under Application Settings.</string>
    <string name="lbl_add_story">Add Story</string>
    <string name="detail_stories">Detail Stories</string>
    <string name="add_stories">Add Stories</string>
    <string name="confirm">Confirm</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="story_image_widget_version">Story Image Widget Version</string>
    <string name="empty">empty</string>
    <string name="notification_title">Checkout new story today</string>
    <string name="notification_subtitle">Tap for more details</string>
    <string name="try_again">Try Again</string>
    <string name="msg_text_failed_fetch_data">Failed fetch data</string>
    <string name="msg_text_widget_removed">Widget Removed</string>
    <string name="button_refresh_data_on_widget">button refresh data on widget</string>
    <string name="camera_x">Camera X</string>
    <string name="change_theme">Change Theme</string>
    <string name="setting_change_language">Change Language</string>
    <string name="setting_icon_arrow">Icon Arrow Setting</string>

    <string name="let_s_register">Let\'s Register</string>
    <string name="before_explore_all_of_user_s_experience_and_story_of_all_user_please_login_with_account_that_you_already_registered">Before Explore all of user\'s experience and story of all user, Please login with account that you already registered.</string>
    <string name="before_explore_all_of_student_s_experience_and_story_when_learning_in_dicoding_and_of_course_you_can_also_share_your_story_too">Before Explore all of student\'s experience and story when learning in Dicoding, and of course you can also share your story too.</string>
    <string name="id">ID: %2$s</string>
    <string name="userId">userId:, %3$s </string>
    <string name="created_by">Created by: %3$s</string>
    <string name="date_time">Date/Time: %4$s</string>
    <string name="flash_camera_is_not_available">Flash camera is Not Available.</string>
    <string name="failure_to_take_picture">Failure to take picture.</string>
    <string name="failure_to_show_camera">Failure to show camera.</string>
    <string name="let_s_sign_in">Let\'s sign in</string>
    <string name="detail_image_story">detail image story</string>
    <string name="maps">Maps</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="not_get_permission">Not get permission</string>
    <string name="location_permission_denied">permission for location denied</string>
    <string name="change_setting">change setting</string>
    <string name="unable_to_fetch_data_of_stories">Unable to fetch data of stories</string>
    <string name="avatar_profile">Avatar Profile</string>
</resources>