<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:padding="10dp"
    app:chainUseRtl="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/grey_900"
            android:textSize="16sp"
            android:text="@string/select_image_input_type"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toTopOf="@id/txt_option_camera"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_option_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/lbl_camera"
            android:textColor="@color/blue_grey_700"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_vector_photo_camera"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/txt_option_gallery"
            app:layout_constraintTop_toBottomOf="@id/txt_title_dialog" />

        <TextView
            android:id="@+id/txt_option_cameraX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:gravity="center"
            android:text="@string/camera_x"
            android:textColor="@color/blue_grey_700"
            android:textSize="15sp"
            android:textStyle="bold"
            app:drawableTopCompat="@drawable/ic_camerax_focus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/txt_option_camera"
            app:layout_constraintEnd_toStartOf="@id/txt_option_gallery"
            app:layout_constraintTop_toBottomOf="@id/txt_title_dialog" />


        <TextView
            android:id="@+id/txt_option_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/lbl_gallery"
            android:textStyle="bold"
            android:textColor="@color/blue_grey_700"
            android:textSize="15sp"
            app:drawableTopCompat="@drawable/ic_vector_gallery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_title_dialog"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txt_option_camera"
            app:layout_constraintHorizontal_chainStyle="spread"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>